k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stone-teste-api-service
spec:
  selector:
    app: stone-teste-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
